Add encryption and NFC

--- a/res/menu/write_password.xml
+++ b/res/menu/write_password.xml
@@ -1,9 +1,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.securesms.Smsencrypt" >
+    tools:context="com.example.securesms.WritePassword" >
 
-    <item
+   <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
@@ -14,16 +14,11 @@
         android:orderInCategory="100"
         android:title="save password"
         app:showAsAction="never"/>
-     
-    	 <item
-        android:id="@+id/action_nfc"
-        android:orderInCategory="100"
-        android:title="NFC"
-        app:showAsAction="never"/>
     	 
     	  <item
         android:id="@+id/action_about"
         android:orderInCategory="100"
         android:title="About"
         app:showAsAction="never"/>
+
 </menu>
