--- a/res/layout/activity_smsencrypt.xml
+++ b/res/layout/activity_smsencrypt.xml
@@ -1,66 +1,70 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.securesms.Smsencrypt" >
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content" >
+	<LinearLayout
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="This is the layout for main app" />
-
-    <Button
-        android:id="@+id/sendbtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="144dp"
-        android:text="Send" />
-
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical" >
+    
     <EditText
-        android:id="@+id/number"
-        android:layout_width="wrap_content"
+        android:id="@+id/password"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView1"
-        android:layout_below="@+id/textView1"
-        android:layout_marginTop="25dp"
         android:ems="10"
-        android:hint="number"
-        android:inputType="phone" />
+        android:focusable="true"
+        android:hint="Password"
+        android:inputType="textPassword" />
+
+    <AutoCompleteTextView
+        android:id="@+id/number"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:ems="10"
+        android:hint="To...." />
+    <requestFocus />
 
     <EditText
         android:id="@+id/message"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/number"
-        android:layout_below="@+id/number"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
-        android:hint="Message" />
+        android:hint="Message"
+        android:inputType="textMultiLine"
+        android:lines="4"
+         >
 
-    <TextView
-        android:id="@+id/textMsg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/sendbtn"
-        android:layout_below="@+id/message"
-        android:layout_marginTop="31dp"
-        android:text="message goes here" />
+        
+    </EditText>
 
     <TextView
         android:id="@+id/txtSent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/sendbtn"
-        android:layout_alignTop="@+id/sendbtn"
-        android:layout_marginRight="38dp"
-        android:layout_marginTop="86dp"
-        android:text="Message Sent goes here" />
+        android:layout_marginTop="70dp"
+         />
 
-</RelativeLayout>
+    <TextView
+        android:id="@+id/textMsg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+         />
+
+    <Button
+        android:id="@+id/sendbtn"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="73dp"
+        android:text="Send" />
+
+    <Button
+        android:id="@+id/decrypt_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Decrypt Message" />
+  
+</LinearLayout>
+</ScrollView>
