--- a/res/layout/activity_about.xml
+++ b/res/layout/activity_about.xml
@@ -2,19 +2,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#3fa9f5"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.securesms.MainActivity" >
+    tools:context="com.example.securesms.About" >
 
-    <ImageView
-        android:id="@+id/imageView1"
+    <TextView
+        android:id="@+id/about"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="162dp" />
+        android:layout_marginTop="20dp"
+        android:textSize="16sp"
+        android:textStyle="bold" >
+    </TextView>
+
+    <Button
+        android:id="@+id/start"
+        style="@style/CustomStyleButton"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/about"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="85dp"
+        android:text="Get Started" />
 
 </RelativeLayout>
