finish ux update

--- a/res/layout/activity_smsencrypt.xml
+++ b/res/layout/activity_smsencrypt.xml
@@ -51,7 +51,7 @@
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
         <TextView
-            android:id="@+id/textMsg"
+            android:id="@+id/sent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -68,7 +68,7 @@
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
         <TextView
-            android:id="@+id/txtSent"
+            android:id="@+id/recieved"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
